Se termina el user controller, service y DTO y Se inicio con el login

--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -10,3 +10,8 @@ logging.level.root=info
 #configuracion jpa hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+database.key=Digitalers2022
+login.expiresIn=10000
+login.type=header
+login.credential = credential
